fix on the jumping sidebar/header

--- a/public/stylesheets/heypal.less
+++ b/public/stylesheets/heypal.less
@@ -116,17 +116,16 @@ a.sup {
 
 // Layout
 
-header{
+body > header{
   background: #fff;
-  //padding-top: 10px;
-  //position: fixed;
   width: 100%;
   top: 0;
+  position: absolute;
   z-index: 999;
 }
 
 body {
-  padding: 10px 0 10px;
+  padding: 114px 0 10px;
 }
 
 .container > footer p {
@@ -189,15 +188,6 @@ label.for-checkbox {
       background: transparent url(../images/icon.pencil.png) 0 0;
     }
   }
-}
-
-
-//
-.topbar.sticky{
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
 }
 
 // Announce
@@ -640,14 +630,7 @@ ul#wizard-selector {
 
 .wizard-aside {
   position: fixed;
-  top: 140px;
   width: 240px;
-}
-
-.wizard-aside.sticky {
-  position:fixed;
-  top: 70px;
-  margin-top: 0;
 }
 
 // Amenities
